# workflow_mnist

./: Dockerfile  README.md  pyproject.toml
artifacts/: digits_mlp.ts  digits_mlp_state_dict.pt  metadata.json
notebooks/: eda.ipynb  traning.ipynb
src/api/: main.py  model_loader.py  schemas.py
src/model/: export.py  model.py  train.py
