[project]
name = "workflow-minist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.132.0",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.10.0"]
gpu = ["torch>=2.10.0"]

[dependency-groups]
dev = [
    "notebook>=7.5.3",
    "pytest>=9.0.2",
      "matplotlib>=3.10.8",
]
